--- a/hr/index.html
+++ b/hr/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>레스토지니 파트너센터 v3.9 (캘린더/급여 완벽 수정)</title>
+    <title>레스토지니 파트너센터 v3.12 (API 통신 픽스)</title>
     
     <!-- 스타일 -->
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
@@ -32,17 +32,24 @@
 
         const API_URL = 'https://script.google.com/macros/s/AKfycbwHhAhlRbIpSgH5bK0qmS4pTxaOOLJmYTMZ-01Y_AAytAAaL1lg-F8LVuYhsHqj5blMnA/exec'; 
 
-        async function fetchAPI(action, payload = null) {
+        // [수정됨] API 통신 함수: GET(조회)과 POST(저장)를 구분
+        async function fetchAPI(action, method = 'GET', payload = null) {
             try {
-                // 모든 요청을 POST로 통일하여 GAS GET 파라미터 이슈 방지
-                const options = {
-                    method: 'POST',
-                    redirect: "follow",
-                    headers: { "Content-Type": "text/plain;charset=utf-8" },
-                    body: JSON.stringify({ action, payload })
-                };
-                const res = await fetch(API_URL, options);
-                return await res.json();
+                if (method === 'GET') {
+                    // GET 요청: 데이터 조회 (doGet 호출)
+                    const res = await fetch(`${API_URL}?action=${action}`);
+                    return await res.json();
+                } else {
+                    // POST 요청: 데이터 저장/수정/삭제 (doPost 호출)
+                    const options = {
+                        method: 'POST',
+                        redirect: "follow",
+                        headers: { "Content-Type": "text/plain;charset=utf-8" },
+                        body: JSON.stringify({ action, payload })
+                    };
+                    const res = await fetch(API_URL, options);
+                    return await res.json();
+                }
             } catch (error) {
                 console.error("API Error:", error);
                 return { status: 'error', message: error.toString() };
@@ -121,7 +128,7 @@
         <main class="flex-1 md:ml-64 p-4 md:p-8 pt-20 md:pt-8 bg-toss-grey100 min-h-screen" x-cloak>
             <div class="max-w-6xl mx-auto">
                 <header class="flex justify-between items-end mb-8">
-                    <div><h1 class="text-2xl font-bold text-toss-grey900 mb-1" x-text="getPageTitle()"></h1><p class="text-toss-grey600 text-sm">v3.10 (캘린더/급여 완벽 수정)</p></div>
+                    <div><h1 class="text-2xl font-bold text-toss-grey900 mb-1" x-text="getPageTitle()"></h1><p class="text-toss-grey600 text-sm">v3.12 (API 통신 픽스)</p></div>
                     <button x-show="activeTab === 'employees'" @click="openEmpModal()" class="flex items-center gap-2 bg-toss-blue hover:bg-blue-600 text-white px-5 py-3 rounded-xl font-bold shadow-toss transition"><i data-lucide="plus" class="w-5 h-5"></i><span>새 직원 등록하기</span></button>
                 </header>
 
@@ -153,7 +160,7 @@
                 <div x-show="activeTab === 'calendar'" class="animate-fade-in h-full flex flex-col">
                     <div class="bg-white rounded-3xl shadow-toss p-6 border border-toss-grey200 flex-1 flex flex-col min-h-[600px]">
                          <div class="flex justify-between items-center mb-6">
-                             <!-- [수정됨] 동적 날짜 표시 및 모달 트리거 -->
+                             <!-- 동적 날짜 표시 -->
                              <h3 class="font-bold text-lg flex items-center gap-2 cursor-pointer hover:text-toss-blue transition" @click="showDateModal = true">
                                  <span x-text="viewType === 'month' ? getMonthString() : getWeekRangeString()"></span>
                                  <i data-lucide="chevron-down" class="w-4 h-4"></i>
@@ -240,7 +247,6 @@
                                                     <div class="font-bold text-lg" x-text="emp.name"></div>
                                                     <div class="text-sm text-toss-grey500">
                                                         <span x-text="formatRole(emp.role)"></span> · 
-                                                        <span x-text="emp.role === 'parttime' ? '시급제' : '월급제(환산)'"></span> ·
                                                         <span x-text="getContractLabel(emp.contractType)"></span>
                                                     </div>
                                                 </div>
@@ -282,7 +288,7 @@
         </main>
     </div>
 
-    <!-- 년/월 선택 모달 (New) -->
+    <!-- 년/월 선택 모달 -->
     <div x-show="showDateModal" class="fixed inset-0 bg-black/40 backdrop-blur-sm z-50 flex items-center justify-center p-4" x-cloak>
         <div class="bg-white w-80 rounded-3xl shadow-2xl p-6" @click.away="showDateModal = false">
             <div class="flex justify-between items-center mb-4"><h3 class="text-lg font-bold">날짜 선택</h3><button @click="showDateModal=false"><i data-lucide="x"></i></button></div>
@@ -299,7 +305,7 @@
         </div>
     </div>
 
-    <!-- 직원/근무 모달 (기존) -->
+    <!-- 직원 모달 (계좌 포함) -->
     <div x-show="showEmpModal" class="fixed inset-0 bg-black/40 backdrop-blur-sm z-50 flex items-center justify-center p-4" x-cloak>
         <div class="bg-white w-full max-w-2xl rounded-[32px] shadow-2xl p-8 max-h-[90vh] overflow-y-auto" @click.away="showEmpModal = false">
             <div class="flex justify-between mb-6"><h2 class="text-2xl font-bold text-toss-grey900">직원 정보 입력</h2><button @click="showEmpModal = false"><i data-lucide="x"></i></button></div>
@@ -343,17 +349,18 @@
                     await this.loadData();
                 },
                 refreshIcons() { setTimeout(() => { if(window.lucide) window.lucide.createIcons(); }, 50); },
+                
+                // [Fix] loadData: Use GET for read operations
                 async loadData() {
                     this.loading = true;
                     try {
-                        const [empRes, shiftRes] = await Promise.all([ fetchAPI('getEmployees'), fetchAPI('getShifts') ]);
+                        const [empRes, shiftRes] = await Promise.all([ fetchAPI('getEmployees', 'GET'), fetchAPI('getShifts', 'GET') ]);
                         if (empRes.status === 'success') this.employees = empRes.data.map(e => { 
                             if(typeof e.schedule==='string'){try{e.schedule=JSON.parse(e.schedule)}catch(err){e.schedule={}}} 
                             if(e.joinDate && e.joinDate.includes('T')) e.joinDate = e.joinDate.split('T')[0];
                             return e; 
                         });
                         if (shiftRes.status === 'success') {
-                            // [Fix] Date Format: YYYY-MM-DD
                             this.shifts = shiftRes.data.map(s => {
                                 if(s.date && s.date.includes('T')) s.date = s.date.split('T')[0];
                                 return s;
@@ -406,13 +413,13 @@
                 async saveEmployee() {
                     const tempId = this.isEmpEditMode ? this.editingEmpId : Date.now().toString(); const tempEmp = { ...this.newEmp, id: tempId };
                     if(this.isEmpEditMode) { const i = this.employees.findIndex(e => e.id === tempId); if(i!==-1) this.employees[i] = tempEmp; } else { this.employees.push(tempEmp); }
-                    this.showEmpModal = false; await fetchAPI(this.isEmpEditMode ? 'updateEmployee' : 'addEmployee', this.newEmp); await this.loadData(); 
+                    this.showEmpModal = false; await fetchAPI(this.isEmpEditMode ? 'updateEmployee' : 'addEmployee', 'POST', this.newEmp); await this.loadData(); 
                 },
                 openShiftModal(d) { const y=this.currentDate.getFullYear(), m=String(this.currentDate.getMonth()+1).padStart(2,'0'), dd=String(d).padStart(2,'0'); this.targetDateStr = `${y}-${m}-${dd}`; this.isEditMode=false; this.newShift={empId:this.employees[0]?.id, startTime:'09:00', endTime:'18:00'}; this.showShiftModal=true; },
                 openEditShiftModal(s) { this.targetDateStr=s.date; this.isEditMode=true; this.editingShiftId=s.id; this.newShift={empId:s.empId, startTime:s.startTime, endTime:s.endTime}; this.showShiftModal=true; },
                 closeShiftModal() { this.showShiftModal=false; },
-                async saveShift() { await fetchAPI(this.isEditMode ? 'updateShift' : 'addShift', { ...this.newShift, date: this.targetDateStr, id: this.editingShiftId || Date.now().toString() }); this.showShiftModal=false; await this.loadData(); },
-                async deleteShift() { if(!confirm('삭제하시겠습니까?')) return; await fetchAPI('deleteShift', { id: this.editingShiftId }); this.showShiftModal=false; await this.loadData(); },
+                async saveShift() { await fetchAPI(this.isEditMode ? 'updateShift' : 'addShift', 'POST', { ...this.newShift, date: this.targetDateStr, id: this.editingShiftId || Date.now().toString() }); this.showShiftModal=false; await this.loadData(); },
+                async deleteShift() { if(!confirm('삭제하시겠습니까?')) return; await fetchAPI('deleteShift', 'POST', { id: this.editingShiftId }); this.showShiftModal=false; await this.loadData(); },
                 // Payroll Logic
                 calculatePayroll(emp) {
                     if (!emp) return null;
